[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["wuchu"]
edition = "2018"
description = "WASM Demo"
repository = ""
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.5", optional = true }
aes = "0.5.0"
rsa = "0.3.0"
rand = "0.7.3"
num-bigint = "0.3.0"
num-bigint-dig = "0.6.0"
num-traits = "0.2"
base64 = "0.12.3"
console_error_panic_hook = { version = "0.1.1", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false